# supernovae-cli

./: .claude  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  RELEASE_NOTES_0.15.3.md  SECURITY.md  SPEC.md  VERIFICATION.md  audit.toml  cliff.toml  release-plz.toml  spn.yaml
.cross/: Dockerfile.aarch64-unknown-linux-gnu
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-plz.yml  release.yml  test.yml
.nika/traces/: gen-94220528-3c03-4109-b930-1093b6260503.ndjson  gen-bc5fc71e-0617-4ae7-8c1c-0ca4637176bb.ndjson  gen-c315ee72-92a4-42ee-9a06-33efa6e9300b.ndjson  gen-f5cfc466-e6eb-4f3d-a545-0cfe44451d7a.ndjson
assets/launchd/: com.supernovae.spn-daemon.plist
crates/spn/: Cargo.toml
crates/spn-backends/: Cargo.toml
crates/spn-client/: Cargo.toml  README.md
crates/spn-client/src/: error.rs  lib.rs  paths.rs  protocol.rs
crates/spn-core/: Cargo.toml  README.md
crates/spn-core/src/: backend.rs  lib.rs  mcp.rs  model.rs  providers.rs  registry.rs  storage.rs  validation.rs
crates/spn-core/src/backup/: adapter.rs  error.rs  manifest.rs  mod.rs  types.rs
crates/spn-keyring/: Cargo.toml  README.md
crates/spn-keyring/src/: lib.rs
crates/spn-mcp/: Cargo.toml  README.md
crates/spn-mcp/src/: error.rs  lib.rs  main.rs
crates/spn-mcp/src/config/: loader.rs  mod.rs  schema.rs
crates/spn-mcp/src/openapi/: mod.rs  parser.rs
crates/spn-mcp/src/server/: handler.rs  handler_tests.rs  mod.rs  rate_limit.rs
crates/spn-native/: ARCHITECTURE_REVIEW.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  MISTRAL_RS_INTEGRATION_PLAN.md  README.md  README_REVIEW.md  REVIEW_INDEX.md  REVIEW_SUMMARY.md
crates/spn-native/src/: error.rs  lib.rs  platform.rs  storage.rs
crates/spn-native/src/inference/: mod.rs  runtime.rs  traits.rs
crates/spn-ollama/: Cargo.toml  README.md
crates/spn-ollama/src/: backend.rs  client.rs  lib.rs  ollama.rs
crates/spn-ollama/tests/: integration.rs
crates/spn-providers/: Cargo.toml  README.md
crates/spn-providers/src/: anthropic.rs  backend.rs  cloud.rs  deepseek.rs  error.rs  gemini.rs  groq.rs  kind.rs  lib.rs  mistral.rs  openai.rs  orchestrator.rs  registry.rs
crates/spn/assets/systemd/: spn-daemon.service
crates/spn/src/: diff.rs  error.rs  first_run.rs  main.rs  prompts.rs  suggest.rs  tui.rs  ux.rs  welcome.rs
crates/spn/src/commands/: add.rs  backup.rs  cache.rs  completion.rs  config.rs  daemon.rs  doctor.rs  explore.rs  help.rs  info.rs  init.rs  install.rs  jobs.rs  list.rs  mcp.rs  mod.rs  model.rs  nk.rs  nv.rs  outdated.rs  provider.rs  publish.rs  remove.rs  schema.rs  search.rs  secrets.rs  setup.rs  skill.rs  status.rs  suggest.rs  sync.rs  update.rs  version.rs
crates/spn/src/commands/model/: handler.rs  mod.rs  run.rs
crates/spn/src/config/: global.rs  local.rs  mod.rs  resolver.rs  team.rs  types.rs
crates/spn/src/daemon/: differ.rs  error.rs  foreign.rs  handler.rs  mod.rs  model_manager.rs  notifications.rs  recent.rs  secrets.rs  server.rs  service.rs  socket.rs  watcher.rs
crates/spn/src/daemon/agents/: manager.rs  mod.rs  types.rs
crates/spn/src/daemon/autonomy/: mod.rs  orchestrator.rs  policy.rs  types.rs
crates/spn/src/daemon/jobs/: mod.rs  scheduler.rs  store.rs  types.rs
crates/spn/src/daemon/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
crates/spn/src/daemon/memory/: mod.rs  store.rs  types.rs
crates/spn/src/daemon/proactive/: analyzer.rs  mod.rs  triggers.rs  types.rs
crates/spn/src/daemon/traces/: mod.rs  store.rs  types.rs
crates/spn/src/index/: client.rs  downloader.rs  mod.rs  resolver.rs  types.rs
crates/spn/src/interop/: binary.rs  detect.rs  mcp_registry.rs  mod.rs  model_registry.rs  npm.rs  skills.rs
crates/spn/src/manifest/: lockfile.rs  mod.rs  spn_yaml.rs
crates/spn/src/mcp/: config.rs  mod.rs  types.rs
crates/spn/src/secrets/: env_storage.rs  keyring.rs  memory.rs  mod.rs  storage.rs  types.rs  wizard.rs
crates/spn/src/status/: credentials.rs  daemon.rs  mcp.rs  mod.rs  ollama.rs  render.rs
crates/spn/src/storage/: local.rs
crates/spn/src/sync/: adapters.rs  config.rs  config_loader.rs  mcp_sync.rs  mod.rs  types.rs
crates/spn/src/ux/: boxes.rs  design_system.rs  help_screen.rs  help_tui.rs  mod.rs  onboarding.rs  progress.rs  stats.rs  tables.rs  terminal.rs  themes.rs  trees.rs
crates/spn/tests/: daemon_ipc.rs  integration_network.rs  mcp_logs.rs
docs/: ARCHITECTURE.md  AUDIT_README.md  COMMIT_AUDIT.md  COMMIT_METRICS.md  COMMIT_RECOMMENDATIONS.md  GETTING_STARTED.md  ROADMAP.md
docs/adr/: 001-config-scope-architecture.md  002-spn-crate-architecture.md  ADR-001-ecosystem-role-distribution.md  ADR-002-daemon-mcp-server.md  ADR-003-scheduler-in-daemon.md
docs/design/: PHASES-DEF-DESIGN.md
docs/guides/: COMPLETE_VISION.md
docs/plans/: 2026-03-01-v0.3.0-full-scope.md  2026-03-02-EXECUTION-PLAN.md  2026-03-02-INTEGRATION-PLAN.md  2026-03-02-SPN-NIKA-EXECUTION-PLAN.md  2026-03-02-VISION-SUMMARY.md  2026-03-02-WEEK1-DAY1-PLAN.md  2026-03-02-ecosystem-architecture-design.md  2026-03-02-v0.7.0-ENHANCED-PLAN.md  2026-03-03-secret-management-design.md  2026-03-03-secret-management-implementation.md  2026-03-03-secrets-p2-implementation.md  2026-03-04-MASTER-EXECUTION-PLAN.md  2026-03-04-spn-daemon-architecture.md  2026-03-05-master-execution-plan.md  2026-03-05-nika-spn-unified-architecture.md  2026-03-05-plan-model-cli-commands.md  2026-03-05-plan2-model-management.md  2026-03-05-plan2b-model-backend-trait.md  2026-03-05-secrets-architecture-refactor.md  2026-03-06-deduplication-refactoring.md  2026-03-06-optimization-session.md  2026-03-06-phase2-implementation.md  2026-03-06-spn-cli-improvements.md  2026-03-06-spn-publish-v07-plan.md  2026-03-06-unified-registry-architecture.md  2026-03-07-agentic-toolkit-evolution.md  2026-03-07-phase3-5-completion.md  2026-03-07-pro-grade-roadmap.md  2026-03-07-ux-improvements-analysis.md  (+34 more)
spec/: SPEC.md
src/: error.rs  main.rs
src/commands/: add.rs  (+24 more)
(+44 files in other folders)
