[workspace]
resolver = "2"
members = [
    "crates/spn",
    "crates/spn-client",
]

[workspace.package]
edition = "2021"
authors = ["SuperNovae Studio <hello@supernovae.studio>"]
license = "MIT"
repository = "https://github.com/SuperNovae-studio/supernovae-cli"
homepage = "https://supernovae.studio"

[profile.release]
lto = true
codegen-units = 1
strip = true
