[workspace]
resolver = "2"
members = [
    "crates/spn",
    "crates/spn-providers",
    "crates/spn-client",
    "crates/spn-core",
    "crates/spn-keyring",
    "crates/spn-mcp",
    "crates/spn-native",
    "crates/spn-ollama",
]

[workspace.package]
edition = "2021"
authors = ["SuperNovae Studio <hello@supernovae.studio>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/SuperNovae-studio/supernovae-cli"
homepage = "https://supernovae.studio"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"  # Smaller binary, no unwinding overhead
