[package]
name = "spn-client"
version = "0.2.0"
edition = "2021"
authors = ["Thibaut MÉLEN <thibaut@supernovae.studio>", "SuperNovae Studio <contact@supernovae.studio>"]
description = "Client library for communicating with the spn daemon - secure secret management for AI applications"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supernovae-st/supernovae-cli"
homepage = "https://supernovae.studio"
documentation = "https://docs.rs/spn-client"
keywords = ["secrets", "ai", "mcp", "daemon", "ipc"]
categories = ["authentication", "development-tools"]
readme = "README.md"
rust-version = "1.75"

[dependencies]
# Core types (providers, validation, backend types)
spn-core = { path = "../spn-core" }

# Async runtime (minimal features)
tokio = { version = "1.36", features = ["net", "io-util", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Error handling
thiserror = "2"

# Utilities
dirs = "5.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
tempfile = "3.10"
