[package]
name = "spn-core"
version = "0.1.1"
edition = "2021"
authors = ["Thibaut MELEN <thibaut@supernovae.studio>", "SuperNovae Studio <contact@supernovae.studio>"]
description = "Core types, provider definitions, and validation for SuperNovae ecosystem"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supernovae-st/supernovae-cli"
homepage = "https://supernovae.studio"
documentation = "https://docs.rs/spn-core"
keywords = ["supernovae", "providers", "validation", "mcp", "llm"]
categories = ["data-structures", "config"]
readme = "README.md"
rust-version = "1.75"

[dependencies]
# Optional serde support for IPC serialization
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# None needed - pure unit tests

[features]
default = []
# Enable serde Serialize/Deserialize derives
serde = ["dep:serde"]
