[package]
name = "spn-mcp"
version = "0.1.5"
edition = "2021"
authors = ["Thibaut MÉLEN <thibaut@supernovae.studio>", "SuperNovae Studio <contact@supernovae.studio>"]
description = "Dynamic REST-to-MCP wrapper - expose REST APIs as MCP tools"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supernovae-st/supernovae-cli"
homepage = "https://supernovae.studio"
documentation = "https://docs.rs/spn-mcp"
keywords = ["mcp", "rest", "api", "wrapper", "ai"]
categories = ["development-tools", "web-programming"]
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "spn-mcp"
path = "src/main.rs"

[dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
# spn ecosystem
# ═══════════════════════════════════════════════════════════════════════════════
spn-core = { version = "0.2.0", path = "../spn-core", features = ["serde"] }
spn-client = { version = "0.3.4", path = "../spn-client" }

# ═══════════════════════════════════════════════════════════════════════════════
# MCP Protocol - Official Anthropic SDK
# NOTE: rmcp 0.16 for compatibility with Nika's MCP client
# ═══════════════════════════════════════════════════════════════════════════════
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Async Runtime
# ═══════════════════════════════════════════════════════════════════════════════
tokio = { version = "1.36", features = ["full"] }

# ═══════════════════════════════════════════════════════════════════════════════
# HTTP Client (webpki-roots bundles CA certs for Docker/scratch images)
# ═══════════════════════════════════════════════════════════════════════════════
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Serialization
# ═══════════════════════════════════════════════════════════════════════════════
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"  # JSON Schema generation for MCP tool params

# ═══════════════════════════════════════════════════════════════════════════════
# Template Engine
# ═══════════════════════════════════════════════════════════════════════════════
tera = "1.19"

# ═══════════════════════════════════════════════════════════════════════════════
# Error Handling
# ═══════════════════════════════════════════════════════════════════════════════
thiserror = "2"
anyhow = "1"

# ═══════════════════════════════════════════════════════════════════════════════
# Logging
# ═══════════════════════════════════════════════════════════════════════════════
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ═══════════════════════════════════════════════════════════════════════════════
# CLI (for standalone mode)
# ═══════════════════════════════════════════════════════════════════════════════
clap = { version = "4", features = ["derive"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Security
# ═══════════════════════════════════════════════════════════════════════════════
secrecy = "0.10"

# ═══════════════════════════════════════════════════════════════════════════════
# Utilities
# ═══════════════════════════════════════════════════════════════════════════════
dirs = "6.0"
async-trait = "0.1"

# ═══════════════════════════════════════════════════════════════════════════════
# Rate Limiting
# ═══════════════════════════════════════════════════════════════════════════════
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
