[package]
name = "spn-native"
version = "0.1.0"
edition = "2021"
authors = ["Thibaut MELEN <thibaut@supernovae.studio>", "SuperNovae Studio <contact@supernovae.studio>"]
description = "Native model inference and storage for SuperNovae ecosystem"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supernovae-st/supernovae-cli"
homepage = "https://supernovae.studio"
documentation = "https://docs.rs/spn-native"
keywords = ["supernovae", "llm", "inference", "gguf", "huggingface"]
categories = ["machine-learning", "filesystem"]
readme = "README.md"
rust-version = "1.85"  # Required by mistralrs 0.7.0 when inference feature enabled

[dependencies]
# Core types
spn-core = { version = "0.2.0", path = "../spn-core" }

# Directory detection
dirs = "6.0"

# HTTP client for HuggingFace downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "fs", "io-util", "sync", "macros"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Checksums
sha2 = "0.10"

# Progress indication
indicatif = { version = "0.17", optional = true }

# Serialization for API responses
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async streams
futures-util = "0.3"
async-stream = "0.3"

# Logging
tracing = "0.1"

# ============================================================================
# Optional: Native LLM Inference (mistral.rs)
# ============================================================================
# These dependencies are only compiled when the "inference" feature is enabled.
# This keeps the base crate lightweight for download-only use cases.

# Native LLM inference via mistral.rs
# Note: Metal feature requires full Xcode (not just Command Line Tools)
# The default "inference" feature uses CPU only; "inference-metal" adds GPU
[dependencies.mistralrs]
version = "0.7"
optional = true
default-features = false
features = []  # CPU-only by default; add "metal" for GPU

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"

[features]
default = []
# Enable terminal progress bars
progress = ["dep:indicatif"]
# Enable native LLM inference via mistral.rs (CPU-only)
inference = ["dep:mistralrs"]
# Enable Metal GPU acceleration (requires full Xcode on macOS)
inference-metal = ["inference", "mistralrs/metal"]
# Alias for convenience
native = ["inference"]
# All features (CPU-only inference)
full = ["progress", "inference"]
# All features with GPU acceleration
full-metal = ["progress", "inference-metal"]
