[package]
name = "spn-ollama"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Ollama backend for SuperNovae model management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supernovae-st/supernovae-cli"
readme = "README.md"
keywords = ["ollama", "llm", "ai", "model-management"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
spn-core = { version = "0.1.1", path = "../spn-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.36", features = ["process", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
