[package]
name = "spn-cli"
version = "0.14.3"
edition = "2021"
authors = ["Thibaut MÉLEN <thibaut@supernovae.studio>", "SuperNovae Studio <contact@supernovae.studio>"]
description = "SuperNovae Package Manager - unified CLI for AI workflows, secrets, MCP servers, and daemon management"
license = "AGPL-3.0-or-later"
repository = "https://github.com/supernovae-st/supernovae-cli"
homepage = "https://supernovae.studio"
documentation = "https://github.com/supernovae-st/supernovae-cli#readme"
keywords = ["cli", "package-manager", "ai", "mcp", "secrets"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
rust-version = "1.85"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml",
]

[[bin]]
name = "spn"
path = "src/main.rs"

[[bin]]
name = "supernovae"
path = "src/main.rs"

[features]
default = ["native"]

# Full native OS integrations (keychain, clipboard, notifications)
# Use for local development and native installs (Homebrew, cargo install)
native = ["os-keychain"]

# OS keychain integration (macOS Keychain, Windows Credential Manager, Linux Secret Service)
os-keychain = ["dep:keyring", "spn-keyring/os-keychain"]

# Minimal build for Docker/static linking - env vars only, no OS deps
docker = []

[dependencies]
# Workspace crates
spn-client = { version = "0.2.4", path = "../spn-client" }
spn-keyring = { version = "0.1.3", path = "../spn-keyring", default-features = false }
spn-ollama = { version = "0.1.3", path = "../spn-ollama" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client (async only - no blocking feature)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Archive handling
flate2 = "1.0"
tar = "0.4"

# Utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dirs = "6.0"
which = "7.0"
semver = "1.0"
walkdir = "2.5"
urlencoding = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
similar = { version = "2.6", features = ["inline"] }

# Security
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"], optional = true }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
dotenvy = "0.15"
libc = "0.2"

# Performance
rustc-hash = "2.1"
dashmap = "6.1"

# Dependency resolution
petgraph = "0.6"

# HTTP retry logic
reqwest-retry = "0.6"
reqwest-middleware = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = "1.36"
pretty_assertions = "1.4"
